site/src/components/diagrams/Diagrams.module.css
.diagramsContainer {
  display: grid;
  grid-template-columns: 100%;
  gap: var(--salt-spacing-300);
  margin-block: var(--salt-spacing-300);
  grid-template-rows:
    [text-container] min-content
    [image] min-content;
}

@media screen and (min-width: 960px) {
  .diagramsContainer {
    grid-template-columns: repeat(2, 1fr);
  }
}

.imageBorder {
  border: var(--salt-size-border) var(--salt-container-borderStyle) var(--salt-container-primary-borderColor);
  padding: calc(var(--salt-spacing-200) - var(--salt-size-border));
}

.primaryBackground {
  background: var(--salt-container-primary-background);
}

.secondaryBackground {
  background: var(--salt-container-secondary-background);
}

.diagram {
  display: grid;
  grid-template-columns: [image text-container] 1fr;

  grid-template-rows:
    [text-container] min-content
    [image] min-content;
  margin-block: var(--salt-spacing-300);
  gap: var(--salt-spacing-100);
}

.diagramsContainer > .diagram {
  grid: subgrid / subgrid;
  grid-row: span 2; /* span parent 2 rows with text-container & image */
}

.diagram:first-child {
  margin-top: 0;
}

@media not screen and (min-width: 960px) {
  .diagram:not(.contentTop) {
    flex-direction: column-reverse;
  }

  .diagram h3,
  .diagram h4 {
    margin-top: 0;
  }

  .diagram ul {
    margin-bottom: var(--salt-spacing-100) !important;
  }
}

.diagramsContainer .diagram {
  margin-block: 0;
}

.contentTop h3,
.contentTop h4 {
  margin-top: 0;
}

.diagram:not(.contentTop) ul {
  margin-bottom: 0px;
}

.image {
  justify-content: center;
  display: flex;
}

.diagramsContainer .image img {
  width: 100%;
}

.textContainer {
  grid-area: text-container;
}

.figure {
  grid-area: image;

  display: flex;
  flex-direction: column;
  gap: var(--salt-spacing-100);
  margin: 0;
}

.caption {
  font-style: var(--salt-editable-help-fontStyle);
  font-size: var(--salt-text-label-fontSize);
  line-height: var(--salt-text-label-lineHeight);
  color: var(--salt-content-primary-foreground);
}

